src/test/ui/pattern/usefulness/match-arm-statics-2.stderr
error[E0004]: non-exhaustive patterns: `(true, false)` not covered
  --> $DIR/match-arm-statics-2.rs:17:11
   |
LL |     match (true, false) {
   |           ^^^^^^^^^^^^^ pattern `(true, false)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `(bool, bool)`

error[E0004]: non-exhaustive patterns: `Some(Some(West))` not covered
  --> $DIR/match-arm-statics-2.rs:29:11
   |
LL |     match Some(Some(North)) {
   |           ^^^^^^^^^^^^^^^^^ pattern `Some(Some(West))` not covered
   | 
  ::: $SRC_DIR/libcore/option.rs:LL:COL
   |
LL |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
   |     ----
   |     |
   |     not covered
   |     not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `std::option::Option<std::option::Option<Direction>>`

error[E0004]: non-exhaustive patterns: `Foo { bar: Some(North), baz: NewBool(true) }` not covered
  --> $DIR/match-arm-statics-2.rs:48:11
   |
LL | / struct Foo {
LL | |     bar: Option<Direction>,
LL | |     baz: NewBool
LL | | }
   | |_- `Foo` defined here
...
LL |       match (Foo { bar: Some(North), baz: NewBool(true) }) {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ pattern `Foo { bar: Some(North), baz: NewBool(true) }` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `Foo`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0004`.
